# base64rvv

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: base64.h
lib/include/: libb64rvv.h  utils.h
lib/src/: base64_rvv_decode.c  base64_rvv_encode.c  picobase64.c
lib/src/m1/: base64_rvv_decode_m1.c  base64_rvv_encode_m1.c
lib/src/m2/: base64_rvv_decode_m2.c  base64_rvv_encode_m2.c
lib/src/m4/: base64_rvv_decode_m4.c  base64_rvv_encode_m4.c
lib/src/util/: utils.c
src/: base64.S  base64.c  base64_decode.c  cycleCount.S  cycleCount.c  horizontal_vector_sum.c  main.c  test.c
